awx/awx-task-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: awx-task
  namespace: awx
  labels:
    app: awx
    role: task
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: awx
        role: task
    spec:
      containers:
      - name: awx-task
        image: ansible/awx_task:latest
        volumeMounts:
        - mountPath: /etc/tower/SECRET_KEY
          name: awx-secret-key
          subPath: SECRET_KEY
      volumes:
      - configMap:
          defaultMode: 420
          name: awx-secret-key
        name: awx-secret-key
