awx/awx-web-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: awx-web
  namespace: awx
  labels:
    app: awx
    role: web
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: awx
        role: web
    spec:
      containers:
      - name: awx-web
        image: ansible/awx_web:latest
        ports:
        - name: http
          containerPort: 8052
        volumeMounts:
        - mountPath: /etc/tower/SECRET_KEY
          name: awx-secret-key
          subPath: SECRET_KEY
      volumes:
      - configMap:
          defaultMode: 420
          name: awx-secret-key
        name: awx-secret-key
